# ResumeAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  PROJECT_INDEX.md  README.md  SETUP_GUIDE.md  copy_resumes.bat  docker-compose.dev.yml  docker-compose.new.yml  docker-compose.yml  install.bat  main.py  nginx.conf  requirements.txt  setup.py  start_cli.bat  start_web.bat
backend-go/: .env.example  Dockerfile  Makefile  config.yaml  go.mod
claudedocs/: research_rag_best_practices_2026-02-03.md
config/: settings.py
data/: .gitkeep
docs/: PERFORMANCE_ANALYSIS.md
docs/architecture/: RAG_IMPROVEMENTS_DESIGN.md  SYSTEM_ARCHITECTURE.md  WEB_PLATFORM_ARCHITECTURE.md
docs/design/: JOB_LIST_ARCHITECTURE.md  RUST_GO_ARCHITECTURE.md  SEQUENCE_DIAGRAMS.md
docs/requirements/: PLATFORM_REQUIREMENTS.md
docs/workflow/: IMPLEMENTATION_PLAN.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
migrations/: 001_initial_schema.sql
ml-service/: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config.yaml
ml-service/proto/: ml.proto
ml-service/src/: config.rs  lib.rs  main.rs
ml-service/src/embedding/: mod.rs  model.rs
ml-service/src/grpc/: mod.rs  service.rs
ml-service/src/ner/: mod.rs  skills.rs
ml-service/src/reranker/: mod.rs  model.rs
ml-service/src/search/: bm25.rs  hybrid.rs  mod.rs  qdrant.rs
scripts/: build.sh  dev.ps1  dev.sh  docker-dev.sh  docker-prod.sh
src/: __init__.py
src/llm_backends/: __init__.py  base.py  chatgpt_web_backend.py  router.py  (+9 more)
tests/: __init__.py
(+113 files in other folders)
